--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,4 @@ logs/
 # 2022-03-29T07:39:40 – qoSd8zNNkSxEbbDlBEBf
 # 2022-04-03T11:02:12 – BhwPi0zofSwlQVUjKcnq
 # 2022-08-20T14:32:29 – 9yJwx1rNBQpIgEcYPefb
+# 2022-10-15T09:54:41 – gYHqQBub4quO8CAC5s1b
